--- a/pom.xml
+++ b/pom.xml
@@ -19,14 +19,14 @@
 		<dependency>
 		    <groupId>org.mybatis</groupId>
 		    <artifactId>mybatis</artifactId>
-		    <version>3.5.6</version>
+		    <version>3.5.9</version>
 		</dependency>
 		
 		<!-- mybatis-spring -->
 		<dependency>
 		    <groupId>org.mybatis</groupId>
 		    <artifactId>mybatis-spring</artifactId>
-		    <version>3.0.3</version>
+		    <version>2.0.7</version>
 		</dependency>
 		
 		<!-- spring-jdbc -->
@@ -143,9 +143,17 @@
 	
 		<!-- Test -->
 		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-test</artifactId>
+		    <version>${org.springframework-version}</version>
+		    <scope>test</scope>
+		</dependency>
+		
+		
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.7</version>
+			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>        
 	</dependencies>
